istio/03-canary/istio-dr-vs.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: istio-canary
  namespace: default
spec:
  host: istio-canary.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: istio-canary
  namespace: default
spec:
  hosts:
    - istio-canary.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: istio-canary.default.svc.cluster.local
            subset: v1
          weight: 50
        - destination:
            host: istio-canary.default.svc.cluster.local
            subset: v2
          weight: 50
